<resources>
    <string name="app_name">COUNTRIES &amp; EXCHANGE</string>
    <string name="title_1">Data from Server:</string>
    <string name="description">nothing to see here</string>
    <string name="country_language">Languages:</string>
    <string name="country_name">Country</string>
    <string name="country_callingcodes">Calling Codes:</string>
    <string name="country_population">Population:</string>
    <string name="country_timezones">Time Zones:</string>
    <string name="country_capital">Capital:</string>
    <string name="country_borders">Borders:</string>
    <string name="country_alphacodes">Alphabetical Codes:</string>
    <string name="country_nativename">Native Name:</string>
    <string name="country_region">Continent:</string>
    <string name="country_currencies">Currencies:</string>
    <string name="country_coma"> , </string>
    <string name="country_area">Area:</string>
    <string name="country_area_km">KM</string>
    <string name="currency_name">Name</string>
    <string name="currency_symbol">Symbol</string>
    <string name="currency_code">Code</string>
    <string name="action_search">Search</string>
    <string name="internet_disconnected">Please check your internet connection</string>
    <string name="internet_disconnected_retry">Please check your internet connection and restart the app</string>
    <string name="country_no_hi_flag">Sorry, no high resolution flag is available</string>
    <string name="splash_loading">Loading....</string>
    <string name="country_no_borders">Island has no Borders.</string>
    <string name="country_map_button">Map</string>
    <string-array name="base_exchange_currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>AUD</item>
        <item>GBP</item>
        <item>CAD</item>
    </string-array>
</resources>
