<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/country_flag"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_flag"></ImageView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/country_flag"
        android:orientation="vertical">

        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/country_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_language"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/country_calling_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_callingcodes"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
